tests/fixtures/invalid/anonymous_aggregate_pointer_array_declaration.c
int main(void) { struct { int x; } *slots[2]; return 0; }
